feat: SSE notification && improved serialization
